########################
# Current Developments #
########################

(Work toward next release. Currently under development.)

ADDED:

  * Added additional arguments to the callback function for ajaxrequest in the
    default handler

  * The "pythoncode" question type now listens to the "csq_show_check" flag

  * Added the "download" and "filename" options to the "raw_response" handler
    to allow making the responses downloadable (thanks to Shen Shen)

  * <python> tags can now be exited using sys.exit(), with non-zero 'return
    codes' causing the output to be ignored (or with a string value, using that
    instead of the Python block's output

  * Additional information is now stored in the question_info logs

  * Added the ability for users to specify that they prefer light text on a
    dark background

  * Updates to the question info cache can now be avoided by setting
    cs_update_questions_cache = False

CHANGED:

  * Suppressed some warnings coming from BeautifulSoup.

  * Changed default session duration to fourteen days instead of two

  * Changed location of lock files to (hopefully) prevent the size of the locks
    directory from growing out of control

  * Javascript files are now located at /js/ instead of /scripts/

  * <chapter>, <section>, <subsection>, and <subsubsection> tags have
    been replaced with <catsoop-chapter>, <catsoop-section>, etc; and a
    conversion script has been provided

  * Moved the default 'remote' Python sandbox and improved the error message
    when the sandbox is offline.

  * Changed the following special variable names to make their purpose clearer:
        - csq_python_sandbox => csq_python_sandbox_type
        - csq_python_interpreter => csq_python_sandbox_interpreter


DEPRECATED:

REMOVED:

  * Due to build issues on some platforms, catsoop no longer depends on uwsgi
    unless [server] is specified when installing.

  * Removed the "cert" login type.

FIXED:
